# pygeoapi-sql-edr

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pygeoapi.config.yml  pyproject.toml
.github/workflows/: pypi.yml  test.yml
docker/: entrypoint.sh
src/pg_edr/: edr.py  lib.py
src/pygeoapi_sql_edr/: edr.py  lib.py
tests/: test_mysql_edr.py  test_postgres_edr.py
tests/data/mysql/: airport-mysql.sql
tests/data/postgres/: timeseries_metadata.sql  waterservices_daily.sql
