# Copyright 2025 Lincoln Institute of Land Policy
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "pygeoapi-sql-edr"
version = "0.1.0"
description = "An OGC API EDR implementation using SQL for pygeoapi"
authors = [{name = "Benjamin Webb", email = "bwebb@lincolninst.edu"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geoalchemy2",
    "psycopg2",
    "pydantic",
    "pygeoapi@https://github.com/webb-ben/pygeoapi/archive/refs/heads/pydantic.zip",
    "pytest"
]
keywords = ['pygeoapi', 'edr', 'data']

classifiers=[   # see https://pypi.org/classifiers/
        'Development Status :: 4 - Beta',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'License :: MIT License',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        'Topic :: Scientific/Engineering :: Atmospheric Science',
        'Topic :: Scientific/Engineering :: GIS',
        'Topic :: Scientific/Engineering :: Information Analysis'
    ]

[project.urls]
Homepage = "https://github.com/internetofwater/pygeoapi-sql-edr"
Repository = "https://github.com/internetofwater/pygeoapi-sql-edr"
